# myblockchain

./: CMakeLists.txt  main.cpp
src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Client.cpp  Client.h  Transaction.cpp  Transaction.h  Utils.cpp  Utils.h
